--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "axios": "^1.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.3",
+    "react-hot-toast": "^2.4.1",
     "react-router-dom": "^6.12.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
@@ -38,6 +40,7 @@
     ]
   },
   "devDependencies": {
+    "daisyui": "^3.0.22",
     "tailwindcss": "^3.3.2"
   }
 }
